Bugfix: header was not being completely hidden in the non visible mode preventing user clicks near the top of the page.

--- a/public/assets/css/header/header-fixed.css
+++ b/public/assets/css/header/header-fixed.css
@@ -235,7 +235,7 @@ body.fixed .settings-pane {
 }
 
 body.hidd .header-fixed {
-	top: -80px;
+	top: -110px;
 }
 
 body.hidd .settings-pane {
